language/tests/error/InvalidAssignmentInBinOp.sl
def double(x) {
  return 2 * x;
}

def main() {
  5 + double(2) = 4;
}
